fixed health and made receiver changes, now switching to main
