# Receiver/app.py
@@ -1,23 +1,21 @@
-import swagger_ui_bundle
-import connexion
 import os
+import connexion
+from connexion import NoContent
 import logging
 import logging.config
 import yaml
 import uuid
 import json
-from pykafka import KafkaClient
 import datetime
-from connexion import NoContent
-import requests
 import time
-from os import environ
+import swagger_ui_bundle
+from pykafka import KafkaClient
 
 import os
 
 def healthcheck():
     return 200
-    
+
 if "TARGET_ENV" in os.environ and os.environ["TARGET_ENV"] == "test":
     print("In Test Environment")
     app_conf_file = "/config/app_conf.yml"
@@ -35,8 +33,8 @@ with open(log_conf_file, 'r') as f:
     logging.config.dictConfig(log_config)
     logger = logging.getLogger('basicLogger')
 
-logger.info("App Conf File: %s" % app_conf_file)
-logger.info("Log Conf File: %s" % log_conf_file)
+logger.info(f"App Conf File: {app_conf_file}")
+logger.info(f"Log Conf File: {log_conf_file}")
 
 # with open('./app_conf.yml', 'r') as f:
 #     app_config = yaml.safe_load(f.read())
@@ -46,12 +44,12 @@ logger.info("Log Conf File: %s" % log_conf_file)
 
 logger = logging.getLogger('basicLogger')
 
-curr_retry = 0
-while curr_retry < app_config["events"]["max_retry"]:
-    curr_retry += 1
+CURR_RETRY = 0
+while CURR_RETRY < app_config["events"]["max_retry"]:
+    CURR_RETRY += 1
     try:
-        logger.info(f"Trying to connect to Kafka, retry count: {curr_retry}")
-        client = KafkaClient(hosts=f'{environ["KAFKA_DNS"]}:{app_config["events"]["port"]}')
+        logger.info(f"Trying to connect to Kafka, retry count: {CURR_RETRY}")
+        client = KafkaClient(hosts=f'{os.environ["KAFKA_DNS"]}:{app_config["events"]["port"]}')
         topic = client.topics[str.encode(app_config["events"]["topic"])]
         producer = topic.get_sync_producer()
     except:
@@ -59,7 +57,7 @@ while curr_retry < app_config["events"]["max_retry"]:
         time.sleep(app_config["events"]["sleep"])
 
 
-def postAuction(body):
+def post_auction(body):
     trace = str(uuid.uuid4())
     body["traceId"] = trace
     logging.info("Received event postAuction request with a trace id of " + trace)
@@ -76,23 +74,10 @@ def postAuction(body):
 
     return "done  👍 ", 201
 
-def bidAuction(body):
+def bid_auction(body):
     trace = str(uuid.uuid4())
     body["traceId"] = trace
     logging.info("Received event bidAuction request with a trace id of " + trace)
-
-
-    # curr_retry = 0
-    # while curr_retry < app_config["events"]["max_retry"]:
-    #     curr_retry += 1
-    #     try:
-    #         logger.info(f"Trying to connect to Kafka, retry count: {curr_retry}")
-    #         client = KafkaClient(hosts=f'{environ["KAFKA_DNS"]}:{app_config["events"]["port"]}')
-    #         topic = client.topics[str.encode(app_config["events"]["topic"])]
-    #         producer = topic.get_sync_producer()
-    #     except:
-    #         logger.error("Connection Failed!")
-    #         time.sleep(app_config["events"]["sleep"])
 
     msg = { "type": "bidAuction",
             "datetime" :
